Shrink the opacity slider to prevent wrapping

--- a/web_client/stylesheets/panels/annotationSelector.styl
+++ b/web_client/stylesheets/panels/annotationSelector.styl
@@ -9,7 +9,7 @@
     background none
 
   input
-    width 210px
+    width 195px
     float right
     margin-left 10px
     margin-top 2px
